# rupi

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  deploy.sh  linker.ld  run.sh  rust-toolchain.toml
.cargo/: config.toml
src/: bsp.rs  cpu.rs  main.rs  panic_wait.rs
src/_arch/aarch64/: cpu.rs
src/_arch/aarch64/cpu/: boot.rs  boot.s
src/_arch/armv7/cpu/: boot.s
src/_arch/armv7a/: cpu.rs
src/_arch/armv7a/cpu/: boot.rs  boot.s
src/bsp/: raspberrypi.rs
src/bsp/raspberrypi/: kernel.ld
src/bsp/rpi2b/: cpu.rs
src/cpu/: boot.rs
