[package]
name = "rupi"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[features]
default = []
bsp_rpi2b = []
bsp_rpi3 = []
bsp_rpi4 = []

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]

[target.'cfg(target_arch = "aarch64")'.dependencies]
cortex-a = "8.0.0"

[target.'cfg(target_arch = "arm")'.dependencies]
cortex-m = "0.7.6"
